                    *************************
                    ** afex VERSION 0.15-x **
                    *************************
                    
                    Changes in afex Version 0.15-x
                    Released xxx 2015

    Significant User Visible Changes and New Features

    o   added p.adjust.method argument for ANOVA functions (anova and nice 
        methods). Can be used to control for multiple comparisons in 
        exploratory ANOVAs (see Cramer, et al., 2015; PB&R). Functionality 
        contributed by Frederik Aust (https://github.com/singmann/afex/pull/3).
        
    Bugfixes
    
    o   ANOVA functions work with dplyr data.frames now (data is transformed
        via as.data.frame). See: https://github.com/singmann/afex/issues/6
    
    o   formulas for mixed can now be of a maximum length of 500 characters 
        (was 60 chars previously): https://github.com/singmann/afex/issues/5
    

    
 
                    *************************
                    ** afex VERSION 0.14-x **
                    *************************
                    
                    Changes in afex Version 0.14-x
                    Released August 2015

    Significant User Visible Changes and New Features

    o   new default return argument for ANOVA functions, afex_aov, 
        an S3 object containing the following:
        (1) ANOVA table of class "anova"
        (2) ANOVA fitted with base R's aov (can be passed to lsmeans 
            for post-hoc tests)
        (3) output from car::Anova (for tests of effects),
            ANOVA table (1) is based on this model
        (4) lm object passed to car::Anova
        (5) data used for estimating (2) and (4)
        
    o   added support for lsmeans: objects of class afex_aov can be 
        passed to lsmeans directly. afex now depends on lsmeans.
    
    o   added afex_options() functionality for setting options globally.
    