@@ -12,7 +12,7 @@ Analysis of Factorial Experiments.
 Package: \tab afex\cr
 Type: \tab Package\cr
 Version: \tab 0.15-2\cr
-Date: \tab 2015-10-08\cr
+Date: \tab 2015-10-22\cr
 Depends: \tab R (>= 3.0.0), lme4 (>= 1.0.5), reshape2, lsmeans (>= 2.17)\cr
 Encoding: \tab UTF-8\cr
 License: \tab GPL (>=3)\cr
